--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,17 @@
     width: 90%;
     margin: auto;
 }
+
+.selected {
+    box-shadow: 10px 10px 10px #959595;
+    background-color: #008BBF;
+    color: #FFFFFF;
+}
+
+
+.selected .changed{
+    color: #FFFFFF;
+}
+.selected .text_data {
+    color: #FFFFFF;
+}
