--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,3 +32,29 @@
         margin: auto;
     }
 }
+
+.labled {
+    align-items: center;
+}
+
+.unckecked {
+    width: 17.5px;
+    height: 17.5px;
+    margin-left: 8px;
+}
+.ckecked {
+    width: 20px;
+    height: 20px;
+    margin-left: 8px;
+}
+input{
+    outline: none;
+}
+
+textarea{
+    outline: none;
+}
+
+.setDatas {
+    transform: translate(-50%,-50%);
+}
