--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,11 +121,11 @@ input[type="checkbox"] {
 }
 
 
-/* @media screen and (max-width:600px) {
+@media screen and (max-width:600px) {
     .change_res{
-        width: 500px !important;
+        width: 400px !important;
     }
-} */
+}
 input:hover{
     border: 0.3px solid #008BBF !important;
 }
