--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,38 +115,48 @@ input[type="checkbox"] {
 
 
 @media screen and (max-width:1024px) {
-    .set_class_data{
+    .set_class_data {
         margin-right: 0px !important;
     }
 }
 
 
 @media screen and (max-width:600px) {
-    .change_res{
+    .change_res {
         width: 400px !important;
     }
 }
 
-input:hover{
+input:hover {
     border: 0.3px solid #008BBF !important;
 }
 
-select:hover{
+select:hover {
     border: 0.3px solid #008BBF !important;
 }
 
-input[type="checkbox"]:hover{
+input[type="checkbox"]:hover {
     border: 0.3px solid #008BBF !important;
 }
 
-textarea:hover{
+textarea:hover {
     border: 0.3px solid #008BBF !important;
 }
 
-.hov-inp:hover{
+.hov-inp:hover {
     border: 0.3px solid #008BBF !important;
 }
 
-select{
-    
+select {
+    -webkit-appearance: none;
+    cursor: pointer;
+    -moz-appearance: none;
+    appearance: none;
+    color: #008BBF;
+    background-image: url(/images/drop.png);
+    /* background-size: cover; */
+    background-position: right;
+    background-position-y: 50%;
+    background-position-x: calc(100% - 25px);
+    background-repeat: no-repeat;
 }
