--- a/styles/globals.css
+++ b/styles/globals.css
@@ -165,3 +165,15 @@ select {
     border: 2px solid #EBF7FC;
     filter: blur(1.5px);
 }
+
+/* .--toastify-toast-width{
+    
+} */
+
+.Toastify__toast {
+    width: 450px !important;
+}
+
+.Toastify__toast-container {
+    width: 450px !important;
+}
