--- a/styles/globals.css
+++ b/styles/globals.css
@@ -177,3 +177,45 @@ select {
 .Toastify__toast-container {
     width: 450px !important;
 }
+
+@media screen and (max-width:1400px) {
+    .Toastify__toast {
+        width: 350px !important;
+    }
+
+    .Toastify__toast-container {
+        width: 350px !important;
+    }
+}
+
+
+/* @media screen and (max-width:1400px) {
+    .Toastify__toast {
+        width: 450px !important;
+    }
+
+    .Toastify__toast-container {
+        width: 450px !important;
+    }
+} */
+
+body {
+    -webkit-touch-callout: none;
+    /* Disable callout on iOS */
+    -webkit-user-select: none;
+    /* Disable selection on iOS */
+    -khtml-user-select: none;
+    /* Disable selection on old Konqueror browsers */
+    -moz-user-select: none;
+    /* Disable selection on Firefox */
+    -ms-user-select: none;
+    /* Disable selection on Internet Explorer */
+    user-select: none;
+    /* Disable selection on modern browsers */
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
