--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,7 +123,12 @@ input[type="checkbox"] {
 
 @media screen and (max-width:600px) {
     .change_res {
-        width: 400px !important;
+        width: 320px !important;
+    }
+}
+@media screen and (max-width:280px) {
+    .change_res {
+        width: 280px !important;
     }
 }
 
