--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,7 +104,7 @@ input[type="checkbox"] {
     opacity: 1 !important;
 } */
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1600px) {
     .main_div {
         flex-direction: column;
     }
@@ -307,11 +307,11 @@ input[type='number']::-webkit-outer-spin-button {
     }
 }
 
-@media screen and (max-width:1430px) {
+/* @media screen and (max-width:1430px) {
     .change_data_box {
-        width: 350px;
+        width: 300px;
     }
-}
+} */
 
 /* @media screen and (max-width:1365px) {
     .change_data_box {
